Criação do Banco de dados SQLite. Correção de Bugs anteriores. Criação de Migração para o Banco de Dados. Inserção de dados no Banco manualmente.

--- a/AppRelacionamentos/appsettings.json
+++ b/AppRelacionamentos/appsettings.json
@@ -1,9 +1,7 @@
 {
-  "ConnectoinStrings": {
-    "MySqlConnection": {
+  "ConnectionStrings": {
       "MySqlConnection": "Server=localhost;DataBase=RelacionamentoDb;Uid=root;Pwd=root",
       "SQLiteConnection": "Data Source=RelacionamentoApp.db"
-    }
   },
   "Logging": {
     "LogLevel": {
