Adicionando o AuthRepository como serviço. Criando o método Register() para novos usuários, e criando também o seu DTO. Criando o método Login() utilizando JWT e seu DTO.

--- a/AppRelacionamentos/appsettings.json
+++ b/AppRelacionamentos/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "super secret key"
+  },
   "ConnectionStrings": {
       "MySqlConnection": "Server=localhost;DataBase=RelacionamentoDb;Uid=root;Pwd=root",
       "SQLiteConnection": "Data Source=RelacionamentoApp.db"
